# chat-server-rs

./: Cargo.toml  message.cql  room.cql
cql/: keyspace.cql  message.cql  room.cql  room_users.cql  user.cql
cql/message/: down.cql  up.cql
cql/room/: down.cql  up.cql
cql/room_users/: down.cql
cql/user/: down.cql  up.cql
src/: client.rs  error.rs  hub.rs  lib.rs  main.rs  main_room.rs  main_user.rs  proto.rs  room_storage.rs  server.rs  user_storage.rs  utils.rs
src/cass/: mod.rs  schema_loader.rs  server_node.rs
src/domain/: message_repository.rs  mod.rs  repository.rs  room_repository.rs  room_user_repository.rs  user_repository.rs
src/model/: feed.rs  message.rs  mod.rs  room.rs  room_user.rs  user.rs
