[package]
name = "chat-server"
version = "0.1.0"
authors = ["miya9022 <miya9022@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.11"
env_logger = "0.7.1"
chrono = { version = "0.4.13", features = ["serde"] }
regex = "1.3.9"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
warp = "0.2.4"
cassandra-cpp = "0.15.1"

[dev-dependencies]
tokio-test = "*"

[[bin]]
name = "feeds"
path = "src/main.rs"

[[bin]]
name = "rooms"
path = "src/main_room.rs"